--- a/assignment/styles/style.css
+++ b/assignment/styles/style.css
@@ -1,1 +1,5 @@
 /* give your assignment a fun background color */
+body {
+  background-color: orange;
+  background-image: radial-gradient(white, orange, black);
+}
